manifests/apps/n8n/ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: n8n
spec:
  rateLimit:
    average: 5
    period: 1m
