manifests/apps/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
spec:
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
  selector:
    service: n8n
