manifests/apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-main-route
  namespace: n8n
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager
  hostnames:
    - "n8n.krea.to"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rest/login
      backendRefs:
        - name: n8n
          port: 5678
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 5678
