manifests/apps/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.krea.to`)
      priority: 10
      services:
        - kind: Service
          name: n8n
          namespace: n8n
          passHostHeader: true
          port: 5678
          scheme: http
  tls:
    secretName: wildcard-krea.to-tls
    domains:
      - main: n8n.krea.to
